--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,41 @@
 /* add css styles here (optional) */
+.card {
+  display: flex;
+  height: 150px;
+  border: 1px solid #000;
+  margin: 10px;
+}
 
-.test {
-  display: inline-block;
-  margin: 2em auto;
-  border: 2px solid #000;
-  font-size: 2em;
+.profilePicture {
+  min-width: 150px;
+  background-color: darkgray;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .card {
+    height: 100px;
+  }
+  .profilePicture{
+    min-width: 100px;
+  }
+}
+
+h1, h2, h3 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+h1 {
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
+h2 {
+  font-size: 1.1rem;
+  font-weight: 400;
+}
+
+.content {
+  flex-grow: 1;
+  padding-left: 10px;
 }
