--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 .card {
   max-width: 400px;;
   display: flex;
-  border: 1px solid #fff;
+  /* border: 1px solid #fff; */
   background-color: #fafafa;
   margin: 10px;
   box-shadow: 1px 1px 8px #666;
@@ -50,6 +50,7 @@ h2 {
   display: flex;
   padding-top: 5px;
   padding-right: 10px;
+  padding-left: 10px;
   flex-direction: column;
 }
 
@@ -59,6 +60,10 @@ h2 {
 
 .iconbutton:active {
   background-color: #d3d3d3;
+}
+
+.twitter {
+  color: #1DA1F2;
 }
 
 @media (max-width: 480px) {
