--- a/src/styles.css
+++ b/src/styles.css
@@ -42,13 +42,13 @@ h2 {
 
 .content {
   flex-grow: 1;
-  padding: 5px;
-  padding-left: 10px;
+  padding: 10px;
 }
 
 .icons {
   display: flex;
-  padding-top: 5px;
+  min-width: 24px;
+  padding-top: 10px;
   padding-right: 10px;
   padding-left: 10px;
   flex-direction: column;
